# harn-gibson

./: .gitignore  README.md  package.json  pyproject.toml
.harn/: settings.json
docs/: 1.0-feature-set.md  1.0-release-audit.md  architecture-diagram.md  architecture.md  claude-gibson-renderer.md  decision_point.md  development.md  launch-modes.md  perception-model-implementation.md  perception-model-spec.md  project-state.md  projection-engine-vision.md  renderer-agent.md  replay.md  sector-map-renderer-result.md  world-model-renderer-result.md  world-model-vision.md
examples/dogfood-workspaces/repo-map/: README.md  pyproject.toml
examples/dogfood-workspaces/repo-map/docs/: usage.md
examples/dogfood-workspaces/repo-map/fixtures/: tasks.txt
examples/dogfood-workspaces/repo-map/scripts/: line_summary.py
examples/dogfood-workspaces/repo-map/src/repo_map/: __init__.py  cli.py
examples/dogfood-workspaces/repo-map/tests/: test_cli.py
extensions/: gibson.py
scripts/: acceptance.sh  million_dollar_demo.py
tests/: test_acceptance_script.py  test_attention.py  test_auth.py  test_browser_capture.py  test_browser_integration.py  test_catalog.py  test_events.py  test_extension.py  test_hooks.py  test_model_renderer.py  test_perception.py  test_project_config.py  test_projection.py  test_renderer_presets.py  test_renderers.py  test_rendering.py  test_replay.py  test_replay_control.py  test_routing.py  test_scene.py  test_semantic_graph.py  test_server_and_cli.py  test_shell_commands.py  test_sinks.py  test_styles.py  test_viewer.py  test_world_bindings.py  test_world_model.py
(+72 files in other folders)
