[project]
name = "harn-gibson"
version = "0.1.0"
requires-python = ">=3.12"
description = "Graphical display and hook fixtures for dramatized harn sessions"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "harn-gibson contributors"}]
keywords = ["harn", "agent", "display", "visualization"]
dependencies = []

[project.scripts]
harn-gibson = "harn_gibson.cli:main"

[dependency-groups]
dev = [
    "playwright>=1.60.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harn_gibson"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "--cov=harn_gibson --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["harn_gibson"]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "def main\\(",
    "raise KeyboardInterrupt",
]
